# ba

./: Cargo.toml  README.md
.ac/: issues.jsonl
.ba/: issues.jsonl
.github/workflows/: release.yml
codex-skill/: README.md
opencode-plugin/: README.md  package.json
plugin/: README.md
plugin/commands/: init.md  new.md
src/: main.rs
