[package]
name = "ac"
version = "0.1.0"
edition = "2024"
description = "Simple task tracking for LLM sessions"
license = "LicenseRef-Proprietary"
repository = "https://github.com/cloud-atlas-ai/ac"
keywords = ["ai", "tasks", "llm", "multi-agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ac"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }
